--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,10 +4,10 @@
   <h2>Login</h2>
 
   <label>Email</label>
-  <input [(ngModel)]="email" name="email" type="email" required />
+  <input [(ngModel)]="form.email" name="email" type="email" required />
 
   <label>Password</label>
-  <input [(ngModel)]="password" name="password" type="password" required />
+  <input [(ngModel)]="form.password" name="password" type="password" required />
 
   <button type="submit">Login</button>
 
